--- a/http-server/Makefile
+++ b/http-server/Makefile
@@ -1,2 +1,2 @@
 all:
-  g++ -std=c++17 main.cpp -o server -lboost_system -lpthread
+	g++ -g -Wall -Wpedantic -Wextra -std=c++17 main.cpp -o server -lboost_system -lpthread
