handles POST and GET requests for person model

--- a/http-server/Makefile
+++ b/http-server/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -g -Wall -Wpedantic -Wextra -std=c++17 main.cpp -o server -lboost_system -lpthread
+	g++ -g -Wall -Wpedantic -Wextra -std=c++17 main.cpp -o server -lboost_system -lboost_json -lpthread
